--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
     grid-template-columns: 20% 80%;
 }
 .sidebar {
-    background-color: #2f2fea;
+    background-color: #0ca2e5;
+    color: white;
     height: 100vh;
 }
 .main {
@@ -17,18 +18,32 @@
 }
 .logo-text {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: row;
-    color: lightsteelblue;
+    color: white;
+    margin: 20px 20px;
 }
+
 img {
     width: 60px;
 }
 .icon-text {
-    color: lightsteelblue;
+    color: white;
+    font-weight: bold;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    padding: 10px;
+    margin: 10px 40px;
 }
+.icon-text p {
+    margin-left: 10px;
+    font-size: 20px;
+}
+.http{
+    color: white;
+    font-weight: bold;
+}
+
