--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+
+.roboto-<uniquifier> {
+             font-family: "Roboto", sans-serif;
+             font-optical-sizing: auto;
+             font-weight: <weight>;
+             font-style: normal;
+             font-variation-settings:
+                     "wdth" 100;
+         }
+
 * {
     margin: 0;
     padding: 0;
@@ -7,10 +17,16 @@
     display: grid;
     grid-template-columns: 20% 80%;
 }
+
+h2{
+    margin-left: 20px;
+}
 .sidebar {
     background-color: #0ca2e5;
     color: white;
     height: 100vh;
+    outline: gray 3px solid;
+
 }
 .main {
     background-color: white;
@@ -39,7 +55,7 @@ img {
     margin: 10px 40px;
 }
 .icon-text p {
-    margin-left: 10px;
+    margin-left: 20px;
     font-size: 20px;
 }
 .http{
